--- a/css/media.css
+++ b/css/media.css
@@ -70,6 +70,9 @@
     .about-me__text {
         padding: 180px 15px 105px;
     }
+    .contacts{
+        padding:100px 0 100px 0;
+    }
     .contacts__btn {
         padding: 10px 100px;
     }
